--- a/README
+++ b/README
@@ -1,2 +1,18 @@
 Bioinformatic workflows of NAFLD study
-Quality control by fastqc
+1. Quality control for raw data
+Quality control by fastQC (0.11.8) and Trimmomatic (v 0.32)
+conda create --name myenv FastQC=0.11.8 Trimmomatic=0.32
+fastqc sampleID.fastq -o quality/
+trimmomatic PE -phred33 -trimlog log.txt $INPUT_PATH/SampleID_1.fastq.gz $INPUT_PATH/SampleID_2.fastq.gz $OUTPUT_PATH/paired_SampleID_1.fq.gz $OUTPUT_PATH/paired_SampleID_2.fq.gz $OUTPUT_PATH/paired_SampleID_1.fq.gz $OUTPUT_PATH/unpaired_SampleID_2.fq.gz ILLUMINACLIP:TruSeq3-PE.fa:2:30:10 LEADING:3 TRAILING:3 SLIDINGWINDOW:4:20 MINLEN:50
+
+2. Host genomic contaminant removal
+conda install --name myenv -c bioconda bowtie2
+wget https://ftp.ncbi.nlm.nih.gov/genomes/all/GCF/000/001/635/GCF_000001635.27_GRCm39/GCF_000001635.27_GRCm39_genomic.fna.gz -O genomic.fa
+bowtie2-build genomic.fa genome_index
+bowtie2 -x genome_index -1 $INPUT_PATH/trimmed_SampleID_1.fq.gz -2 $INPUT_PATH/trimmed_SampleID_2.fq.gz --un-conc-gz $OUTPUT_PATH/SampleID.hostfree.fq.gz -p 60 -S $OUTPUT_PATH/SampleID.sam 1>$OUTPUT_PATH/SampleID.o 2>$OUTPUT_PATH/SampleID.e
+
+3. Paired-end reads assembly
+conda install --name myenv -c bioconda spades
+spades.py --meta -t 20 -m 500 -1 $INPUT_PATH/SampleID.hostfree_1.fq.gz -2 $INPUT_PATH/SampleID.hostfree_2.fq.gz -o $OUTPUT_PATH/SampleID_assembly 1>$OUTPUT_PATH/SampleID.o 2>$OUTPUT_PATH/SampleID.e
+
+4. Open reading frames (ORFs) prediction
